fixed overflow styling

--- a/frontend/src/components/Reviews/ReviewPage.css
+++ b/frontend/src/components/Reviews/ReviewPage.css
@@ -140,6 +140,7 @@
     margin: 16px 0px;
     padding: 20px;
     height: 200px;
+    overflow: scroll;
 }
 
 .single-review-title {
